# vk_demo

./: .gitignore  CMakeLists.txt  Makefile  learnvulkan.markdown  main.cpp  vcpkg.json  vk_demo.sln  vk_demo.vcxproj
include/: HelloTriangleApplication.h  QueueFamilyIndices.h  SwapChainSupportDetails.h  UniformBufferObject.h  Vertex.h
include/tinyobjloader/: tiny_obj_loader.h
src/: HelloTriangleApplication.cpp  main.cpp
src/shaders/: shader.frag  shader.vert
